# test-ci-cd

./: .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  main.py  pyproject.toml
.github/workflows/: ci.yml
subtree/: main.py
test_pack/: test_mod.py
