[tool.poetry]
name = "test-ci-cd"
version = "0.1.0"
description = ""
authors = ["Anton Sidarevich <as@apostro.xyz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"
pylint = "^2.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
